[gd_scene load_steps=3 format=2]

[ext_resource path="res://Menu.gd" type="Script" id=1]
[ext_resource path="res://Action RPG Resources/Music and Sounds/Menu Move.wav" type="AudioStream" id=2]

[node name="Menu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}
fase1 = "res://World.tscn"

[node name="Button" type="Button" parent="."]
margin_left = 128.0
margin_top = 56.0
margin_right = 192.0
margin_bottom = 76.0
text = "start"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button2" type="Button" parent="."]
margin_left = 128.0
margin_top = 88.0
margin_right = 192.0
margin_bottom = 108.0
text = "quit"

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 2 )

[connection signal="button_down" from="Button" to="." method="_on_Button_button_down"]
[connection signal="button_up" from="Button" to="." method="_on_Button_button_up"]
[connection signal="button_down" from="Button2" to="." method="_on_Button2_button_down"]
[connection signal="button_up" from="Button2" to="." method="_on_Button2_button_up"]
